feat: allow vgpattern to be configurable for openEBS

--- a/charts/kubezero-storage/templates/lvm-storageclass.yaml
+++ b/charts/kubezero-storage/templates/lvm-storageclass.yaml
@@ -6,6 +6,6 @@ volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Delete
 parameters:
   storage: lvm
-  vgpattern: "openebs.*"
+  vgpattern: {{ default "openebs.*" .Values.storageClass.vgpattern }}
   fsType: xfs
 provisioner: local.csi.openebs.io
