--- a/charts/kubezero-storage/values.yaml
+++ b/charts/kubezero-storage/values.yaml
@@ -38,3 +38,6 @@ openebs:
         effect: NoSchedule
       nodeSelector:
         node-role.kubernetes.io/master: ""
+
+storageClass:
+  vgpattern: ""
