--- a/charts/kubezero/templates/storage.yaml
+++ b/charts/kubezero/templates/storage.yaml
@@ -1,4 +1,10 @@
 {{- define "storage-values" }}
+
+{{- with index .Values "cert-manager" "storageClass" }}
+storageClass:
+  {{- . | toYaml | nindent 2 }}
+{{- end }}
+
 {{- end }}
 
 {{- define "storage-argo" }}
