--- a/charts/kubezero-storage/templates/lvm-storageclass.yaml
+++ b/charts/kubezero-storage/templates/lvm-storageclass.yaml
@@ -2,6 +2,10 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: openebs-lvm
+  {{- if .Values.storageClass.default }}
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
+  {{- end }}
 volumeBindingMode: WaitForFirstConsumer  
 reclaimPolicy: Delete
 parameters:
