--- a/charts/kubezero-redis/templates/envoyfilter-custom-redis-cluster.yaml
+++ b/charts/kubezero-redis/templates/envoyfilter-custom-redis-cluster.yaml
@@ -22,7 +22,7 @@ spec:
                 address:
                   socket_address:
                     address: {{ $.Release.Name }}-{{ $i }}.{{ $.Release.Name }}-headless.{{ $.Release.Namespace }}.svc.cluster.local
-                    port_value: {{ index $.Values "redis-cluster" "redisPort" }}
+                    port_value: 6379
             {{- end }}
         cluster_type:
           name: envoy.clusters.redis
