fix: fix service name target for NATS istio support

--- a/charts/kubezero-mq/templates/nats/istio-service.yaml
+++ b/charts/kubezero-mq/templates/nats/istio-service.yaml
@@ -16,7 +16,7 @@ spec:
     - port: 1883
     route:
     - destination:
-        host: {{ .Release.Name }}-nats
+        host: nats
         port:
           number: 1883
 {{- end }}
