feat: Istio RateLimiting, Version bump to 1.11.1, Kiali support

--- a/charts/kubezero-istio-ingress/charts/istio-ingress/templates/service.yaml
+++ b/charts/kubezero-istio-ingress/charts/istio-ingress/templates/service.yaml
@@ -34,8 +34,10 @@ spec:
     {{- range $key, $val := $gateway.ports }}
     -
       {{- range $pkey, $pval := $val }}
+      {{- if has $pkey (list "name" "nodePort" "port" "targetPort") }}
       {{ $pkey}}: {{ $pval }}
       {{- end }}
+    {{- end }}
     {{- end }}
 
   {{ range $app := $gateway.ingressPorts }}
