--- a/charts/kubezero-istio/Chart.yaml
+++ b/charts/kubezero-istio/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-istio
 description: KubeZero Umbrella Chart for Istio
 type: application
-version: 0.6.1
-appVersion: 1.10.3
+version: 0.7.2
+appVersion: 1.11.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -13,10 +13,14 @@ maintainers:
   - name: Quarky9
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.3"
+    version: ">= 0.1.4"
     repository: https://zero-down-time.github.io/kubezero/
   - name: base
-    version: 1.10.3
+    version: 1.11.1
   - name: istio-discovery
-    version: 1.10.3
+    version: 1.11.1
+  - name: kiali-server
+    version: 1.38.1
+    # repository: https://github.com/kiali/helm-charts/tree/master/docs
+    condition: kiali-server.enabled
 kubeVersion: ">= 1.18.0"
