--- a/charts/kubezero-istio/templates/servicemonitor.yaml
+++ b/charts/kubezero-istio/templates/servicemonitor.yaml
@@ -5,7 +5,7 @@ metadata:
   name: istio-component-monitor
   namespace: {{ .Release.Namespace }}
   labels:
-{{ include "kubezero-lib.labels" . | indent 4 }}
+    {{- include "kubezero-lib.labels" . | nindent 4 }}
 spec:
   jobLabel: istio
   targetLabels: [app]
