--- a/charts/kubezero/templates/istio-ingress.yaml
+++ b/charts/kubezero/templates/istio-ingress.yaml
@@ -7,6 +7,7 @@ gateways:
 {{- end }}
 certificates:
 {{- with .dnsNames }}
+# Legacy to be removed with 1.21 !!
 - name: ingress-cert
   dnsNames:
   {{- toYaml . | nindent 4 }}
