--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -75,6 +75,9 @@ fluentd:
   dashboards:
     enabled: false
 
+  podSecurityPolicy:
+    enabled: false
+
   # No need for docker nor /var/log
   volumes:
   - name: etcfluentd-main
