fix: adjust kubezero argocd flow once more

--- a/charts/kubezero-argocd/values.yaml
+++ b/charts/kubezero-argocd/values.yaml
@@ -106,6 +106,10 @@ argo-cd:
 argocd-applicationset:
   enabled: false
 
+  # Prevent accidental cascading deletes of Applications
+  args:
+    policy: create-update
+
   rbac:
     pspEnabled: false
 
