--- a/charts/kubezero/templates/argocd.yaml
+++ b/charts/kubezero/templates/argocd.yaml
@@ -24,6 +24,11 @@ istio:
   {{- end }}
 {{- end }}
 
+{{- with index .Values "argocd" "argocd-applicationset" }}
+argocd-applicationset:
+  {{ toYaml . | nindent 2 }}
+{{- end }}
+
 {{- end }}
 
 {{- define "argocd-argo" }}
