--- a/charts/kubezero/templates/kubezero.yaml
+++ b/charts/kubezero/templates/kubezero.yaml
@@ -56,14 +56,16 @@ spec:
     targetRevision: {{ .Values.kubezero.gitSync.targetRevision }}
     path: {{ .Values.kubezero.gitSync.path }}
 
-  directory:
-    recurse: true
+    directory:
+      recurse: true
 
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
 
+  {{- with .Values.kubezero.syncPolicy }}
   syncPolicy:
-    automated:
-      prune: true
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+
 {{- end }}
