--- a/charts/kubezero-storage/templates/lvm-storageclass.yaml
+++ b/charts/kubezero-storage/templates/lvm-storageclass.yaml
@@ -1,8 +1,9 @@
+{{- if index .Values "lvm-localpv" "enabled" }}
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: openebs-lvm
-  {{- if .Values.storageClass.default }}
+  {{- if index .Values "lvm-localpv" "storageClass" "default" }}
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
   {{- end }}
@@ -10,6 +11,7 @@ volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Delete
 parameters:
   storage: lvm
-  vgpattern: {{ default "openebs.*" .Values.storageClass.vgpattern }}
+  vgpattern: {{ default "openebs.*" ( index .Values "lvm-localpv" "storageClass" "vgpattern") }}
   fsType: xfs
 provisioner: local.csi.openebs.io
+{{- end }}
