--- a/charts/kubezero-storage/values.yaml
+++ b/charts/kubezero-storage/values.yaml
@@ -1,5 +1,5 @@
 lvm-localpv:
-  enabled: true
+  enabled: false
 
   lvmNode:
     nodeSelector:
@@ -16,6 +16,18 @@ lvm-localpv:
     nodeSelector:
       node-role.kubernetes.io/master: ""
 
-storageClass:
-  vgpattern: ""
-  default: true
+  storageClass:
+    vgpattern: ""
+    default: false
+
+gemini:
+  enabled: false
+  # verbosity: 1
+
+  resources:
+    requests:
+      memory: 32Mi
+      cpu: 20m
+    limits:
+      memory: 128Mi
+      cpu: 400m
