--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -236,9 +236,9 @@ fluentd:
 fluent-bit:
   enabled: false
 
-  #image:
+  image:
     #repository: public.ecr.aws/zero-downtime/fluent-bit
-    #tag: 1.8.3
+    tag: 1.8.5
 
   serviceMonitor:
     enabled: false
