fix: [redis] no envoyfilter if istio is disabled

--- a/charts/kubezero-redis/templates/envoyfilter-custom-redis-cluster.yaml
+++ b/charts/kubezero-redis/templates/envoyfilter-custom-redis-cluster.yaml
@@ -1,4 +1,4 @@
-{{- if index .Values "redis-cluster" "enabled" }}
+{{- if and ( index .Values "redis-cluster" "enabled" ) .Values.istio.enabled }}
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
